--- a/index.html
+++ b/index.html
@@ -2,109 +2,57 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Checkout</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link
+      href="https://fonts.googleapis.com/css2?family=Audiowide&family=Montserrat:wght@400;800&display=swap"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
+    <title>Calcutor</title>
   </head>
+
   <body>
-    <h1 id="checkout-title">Checkout Page</h1>
-    <main>
-      <div id="products-preview">
-        <div id="product-painel">
-          <div class="products">
-            <div class="product">
-              <img src="img/photo1.png" alt="" />
-              <div class="product-info">
-                <h2>Vintage Backbag</h2>
-                <div class="product-price">
-                  <p>
-                    <strong>25.98</strong>
-                    <span class="line-through">34.99</span>
-                  </p>
-                </div>
-                <div class="quantity-controller">
-                  <i class="fa-solid fa-minus"></i>
-                  <p class="quantity">1</p>
-                  <i class="fa-solid fa-plus"></i>
-                </div>
-                <div class="product-removal">
-                  <button class="remove-product">Remove</button>
-                </div>
-                <div class="product-line-price">25.98</div>
-              </div>
-            </div>
-
-            <div class="product">
-              <img src="img/photo2.png" alt="" />
-              <div class="product-info">
-                <h2>Levi Shoes</h2>
-                <div class="product-price">
-                  <p>
-                    <strong>45.99</strong>
-                    <span class="line-through">54.99</span>
-                  </p>
-                </div>
-                <div class="quantity-controller">
-                  <i class="fa-solid fa-minus"></i>
-                  <p class="quantity">1</p>
-                  <i class="fa-solid fa-plus"></i>
-                </div>
-                <div class="product-removal">
-                  <button class="remove-product">Remove</button>
-                </div>
-                <div class="product-line-price">45.99</div>
-              </div>
-            </div>
-
-            <div class="product">
-              <img src="img/photo3.jpg" alt="" />
-              <div class="product-info">
-                <h2>Antique Clock</h2>
-                <div class="product-price">
-                  <p>
-                    <strong>74.99</strong>
-                    <span class="line-through">94.99</span>
-                  </p>
-                </div>
-                <div class="quantity-controller">
-                  <i class="fa-solid fa-minus"></i>
-                  <p class="quantity">1</p>
-                  <i class="fa-solid fa-plus"></i>
-                </div>
-                <div class="product-removal">
-                  <button class="remove-product">Remove</button>
-                </div>
-                <div class="product-line-price">74.99</div>
-              </div>
-            </div>
-          </div>
-          <div class="buy-detail" id="cart-subtotal">
-            <p>Subtotal</p>
-            <p>0</p>
-          </div>
-          <div class="buy-detail" id="cart-tax">
-            <p>Tax(%18)</p>
-            <p>0</p>
-          </div>
-          <div class="buy-detail" id="cart-shipping">
-            <p>Shipping</p>
-            <p>0</p>
-          </div>
-          <div class="buy-detail" id="cart-total">
-            <p>Total</p>
-            <p>0</p>
-          </div>
+    <div class="container">
+      <div class="operationArea">
+        <div id="resultArea">
+          <div id="previousArea"></div>
+          <div id="currentArea"></div>
         </div>
+
+        <table id="table">
+          <tr>
+            <td class="selector" id="allDel">AC</td>
+            <td class="number">-</td>
+            <td class="selector" id="del">DEL</td>
+            <td class="operationButtons">/</td>
+          </tr>
+          <tr>
+            <td class="number">7</td>
+            <td class="number">8</td>
+            <td class="number">9</td>
+            <td class="operationButtons">+</td>
+          </tr>
+          <tr>
+            <td class="number">4</td>
+            <td class="number">5</td>
+            <td class="number">6</td>
+            <td class="operationButtons">-</td>
+          </tr>
+          <tr>
+            <td class="number">1</td>
+            <td class="number">2</td>
+            <td class="number">3</td>
+            <td class="operationButtons">x</td>
+          </tr>
+          <tr>
+            <td id="zero" class="number" colspan="2">0</td>
+            <td class="number">.</td>
+            <td id="result" class="result">=</td>
+          </tr>
+        </table>
       </div>
-    </main>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
